--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ title: Spicynois Reviews
 email: officialdavnmusic.com
 description: >- # this means to ignore newlines until "baseurl:" Hola, bienvenidos a Spicynois Reviews, soy David Mendoza, acompañame a reseñar diferentes álbums de la infustria músical.
 baseurl: "/myblog-Spicynois"
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
+url: "https://davidbmb04.github.io"
 twitter_username: jekyllrb
 github_username:  jekyll
 
