--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ url: "https://davidbmb04.github.io"
 github_username: DavidBMB04
 
 # Build settings
-theme: jekyll-theme-minimal
+theme: jekyll-theme-cayman
 plugins:
   - jekyll-feed
 
