--- a/_config.yml
+++ b/_config.yml
@@ -29,6 +29,7 @@ github_username: DavidBMB04
 theme: jekyll-theme-cayman
 plugins:
   - jekyll-feed
+layout: default
 
 # Exclude from processing.
 # The following items will not be processed, by default.
